@@ -8,7 +8,8 @@
 ARCH=$(shell dpkg-architecture -qDEB_HOST_GNU_CPU)
 UAPIVER=6.0-003
 UAPIDIR=V$(UAPIVER)_$(ARCH)
-VISTAINSTANCEDIR=$(PWD)/debian/usr/share/vista-foia
+LOCALINSTANCEDIR=$(PWD)/debian
+VISTAINSTANCEDIR=$(LOCALINSTANCEDIR)/usr/share/vista-foia
 GTM_INSTALL_DIR=/usr/lib/fis-gtm/$(UAPIDIR)
 VISTA_GLOBALS_DIR=$(VISTAINSTANCEDIR)/g
 VISTA_ROUTINES_DIR=$(VISTAINSTANCEDIR)/r
@@ -24,6 +25,43 @@ VISTA_TESTING_SOURCE_DIR=$(PWD)
 
 %:
 	dh $@
+
+
+#
+#  Bring in the full list of VistA M routines
+#  and place them in the vista_m_sources variable
+#
+include debian/vista_m_routines_list
+
+#
+#  Define the default paths for finding .m files and .o files
+#
+vpath %.m $(VISTA_ROUTINES_DIR)
+vpath %.o $(VISTA_OBJECTS_DIR)
+
+#
+#  Implicit rule to compile MUMPS files into object files
+#
+#  http://tinco.pair.com/bhaskar/gtm/doc/books/pg/UNIX_manual/ch03s05.html#Compile_from_Shell
+#
+%.o : %.m
+	echo $< -o $(VISTA_OBJECTS_DIR)/$(@F)
+	(export gtmgbldir=$(VISTA_GTM_DATABASE); \
+export gtmroutines=$(VISTA_GTM_ROUTINES); \
+export gtm_dist=$(GTM_INSTALL_DIR); \
+export gtm_destdir=$(LOCALINSTANCEDIR); \
+$(GTM_INSTALL_DIR)/mumps -object=$(VISTA_OBJECTS_DIR)/$(@F)  $<  )
+
+vista_m_sources := $(patsubst %.m,$(VISTA_ROUTINES_DIR)/%.m,$(vista_m_sources_files))
+vista_o_objects_files := $(patsubst %.m,%.o,$(vista_m_sources_files))
+
+#
+#  This list of dependencies will invoke the implicit rule for .m -> .o
+#
+compile_vista_routines: $(vista_o_objects_files)
+	echo "Compiling all M routines"
+
+
 
 override_dh_auto_configure:
 	(export gtmgbldir=$(VISTA_GTM_DATABASE); export gtmroutines=$(VISTA_GTM_ROUTINES); export gtm_dist=$(GTM_INSTALL_DIR); \
