@@ -22,5 +22,6 @@ vista-foia (0.20140106-1) UNRELEASED; urgency=low
   * In control, added xinetd and ssh as dependencies.
   * In rules, removing .pyc files in clean: target.
   * Started adding deployment scripts to create instances.
+  * In rules, added make rule for compiling VistA .m routines into .o files.
 
  -- Luis Ibanez <luis.ibanez@kitware.com>  Wed, 4 Jul 2012 17:16:45 -0500
